----------------------------
testrepository release notes
----------------------------

NEXT (In development)
---------------------

IMPROVEMENTS
~~~~~~~~~~~~

* New subcommand 'failing' added.